fix(app-detailed-service): add style to prevent overflow

--- a/src/pages/app-detailed-service/app-detailed-service.scss
+++ b/src/pages/app-detailed-service/app-detailed-service.scss
@@ -2,6 +2,7 @@
 
 .services {
   font-family: 'Muli', sans-serif;
+  overflow-x: hidden;
 
   .hero {
     padding-top: 150px;
